fix paragraph spacing on task detail page

--- a/app/happypath/[slug]/page.module.css
+++ b/app/happypath/[slug]/page.module.css
@@ -38,11 +38,11 @@
 }
 
 .taskContent p {
-  margin: 0;
+  margin: 0 0 24px;
   font-family: var(--font-family-secondary);
   font-size: var(--font-size-md);
 }
 
 .taskContent p:first-of-type {
-  font-size: var(--font-size-lg)
+  font-size: var(--font-size-lg);
 }
